# meme-engine

./: CHANGELOG.md  LICENSE  README.md
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
commands/: ralph-loop.md
hooks/: hooks.json
plugins/graceful-handoff/.claude-plugin/: plugin.json
plugins/graceful-handoff/commands/: grace.md  help.md
plugins/ralph-loop-py/.claude-plugin/: plugin.json
plugins/ralph-loop-py/commands/: cancel-ralph.md  help.md  ralph-loop.md
plugins/ralph-loop-py/hooks/: hooks.json  stop-hook.py
plugins/ralph-loop-py/scripts/: setup-ralph-loop.py
plugins/research-clab/: KNOWLEDGE-DATABASE.md
plugins/research-clab/.claude-plugin/: plugin.json
plugins/research-clab/agent-memory/: constraint-map.md
plugins/research-clab/agents/: coordinator.md  indexer.md  librarian.md  scout.md
plugins/research-clab/plans/: session-0-plan.md
plugins/research-clab/project-origami/: unfold-agent-format.md  unfold-agents.md  unfold-discipline-overlay.md  unfold-document-prep.md  unfold-knowledge.md  unfold-mcp.md  unfold-methodology.md  unfold-papers.md  unfold-python-env.md  unfold-rules.md  unfold-structure.md  unfold-teams.md
plugins/research-clab/templates/: KNOWLEDGE-DATABASE.md  plan-compute.md  plan-workshop.md  prompt-session.md  workshop.md
plugins/research-clab/templates/universal/mcps/paper-search/server/: pyproject.toml
plugins/research-clab/templates/universal/mcps/paper-search/server/paper_search_mcp/academic_platforms/: arxiv.py  google_scholar.py
plugins/skeptic-validator/commands/: help.md  (+1 more)
(+282 files in other folders)
